add navigation page

--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,6 @@
     <script type="module" src="index.ts"></script>
 </head>
 <body>
-    <main class="page">
-        <nav class="navigation">
-            <ul class="link-list">
-                <li class="nav-link-item"><a class="nav-link" href="./pages/login/login.hbs">LogIn</a></li>
-                <li class="nav-link-item"><a class="nav-link" href="./pages/signin/signin.hbs">SignIn</a></li>
-                <li class="nav-link-item"><a class="nav-link" href="./pages/error/404.hbs">404</a></li>
-                <li class="nav-link-item"><a class="nav-link" href="./pages/error/500.hbs">500</a></li>
-                <li class="nav-link-item"><a class="nav-link" href="./pages/chat/chat.hbs">Chat</a></li>
-                <li class="nav-link-item"><a class="nav-link" href="./pages/profile/profile.hbs">Profile</a></li>
-                <li class="nav-link-item"><a class="nav-link" href="./pages/edit-profile/edit-profile.hbs">Edit Profile</a></li>
-                <li class="nav-link-item"><a class="nav-link" href="./pages/change-password/change-password.hbs">Change Password</a></li>
-            </ul>
-        </nav>
-    </main>
+  <div id="app"></div>
 </body>
 </html>
