--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Yet Another Messenger</title>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-    <link rel="stylesheet" href="./styles/styles.pcss">
-    <script type="module" src="index.ts"></script>
 </head>
 <body>
   <div id="app"></div>
